--- a/application/layouts/scripts/admin.phtml
+++ b/application/layouts/scripts/admin.phtml
@@ -84,6 +84,9 @@ $user = Zend_Auth::getInstance()->getIdentity();
                             <a href="<?php echo $this->url(array('controller' => 'admin_dashboard'), 'default', true);?>"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
                         </li>
                         <li>
+                            <a href="<?php echo $this->url(array('controller' => 'admin_books'), 'default', true);?>"><i class="fa fa-book fa-fw"></i> Books</a>
+                        </li>
+                        <li>
                             <a href="<?php echo $this->url(array('controller' => 'admin_indexslides'), 'default', true);?>"><i class="fa fa-sliders fa-fw"></i> Index Slider</a>
                         </li>
 						<li>
