--- a/application/views/scripts/books/index.phtml
+++ b/application/views/scripts/books/index.phtml
@@ -1,64 +1,14 @@
-<!--******************************************
-        **********************************************
-                        MAIN START
-        *********************************************
-        ******************************************-->
+<?php
+
+$this->headTitle($this->sitemapPage['title'])
+
+?>
         <main>
 
             <ol class="breadcrumb text-center">
                 <li><a href="#">Home</a></li>
                 <li><b>Books</b></li>
             </ol>
-
-            <!--******************************************
-                            MAIN SLIDER START
-             ******************************************-->
-            <div class="slider">
-                <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-
-                    <!-- Wrapper for slides -->
-                    <div class="carousel-inner" role="listbox">
-                        <div class="item active">
-
-                            <img src="/front/img/sliderBooks.png">
-                            <div class="carousel-caption">
-                                <h2><b>Hezy Theme:</b> What We Can All Do to Save America's Future</h2>
-                                <a href="#">VIEW MORE</a>
-                            </div>
-                        </div>
-                        <div class="item">
-                            <img src="/front/img/sliderBooks.png">
-                            <div class="carousel-caption">
-                                <h2><b>Hezy Theme:</b> What We Can All Do to Save America's Future</h2>
-                                <a href="#">VIEW MORE</a>
-                            </div>
-                        </div>
-                        <div class="item">
-                            <img src="/front/img/sliderBooks.png">
-                            <div class="carousel-caption">
-                                <h2><b>Hezy Theme:</b> What We Can All Do to Save America's Future</h2>
-                                <a href="#">VIEW MORE</a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- Controls -->
-                    <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-                        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-                        <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-                        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-                        <span class="sr-only">Next</span>
-                    </a>
-                </div>
-            </div>
-            <!--******************************************
-                          MAIN SLIDER END
-             ******************************************-->
-
-
-
 
             <!--******************************************
                      MAIN PRODUCTS-SORTING START
@@ -167,78 +117,20 @@
                     <div class="arrowRight">
                         <p class="text-center"><a href="#">See all <span class="fa fa-arrow-right"></span></a></p>
                     </div>
-                    <div class="booksFirst firstBook">
+                    <?php foreach($this->books as $book) {?>
+                    <div class="books">
                         <figure class="center-block">
-                            <a href="#"><img src="/front/img/books/bookGreen.png" class="img-responsive"></a>                     
-                        </figure>                  
-                        <h4><a href="#">Art, Architecture & Photography</a></h4>
-                        <p class="nameOfBook">310 items</p>
-                    </div>
-                    <div class="booksFirst">
-                        <figure class="center-block">
-                            <a href="#"><img src="/front/img/books/bookOrange.png" class="img-responsive"></a>
+                            <a href="<?php echo $this->bookUrl($book);?>"><img src="<?php echo $this->bookImgUrl($book);?>" class="img-responsive"></a>
                         </figure>
-                        <h4><a href="#">Bible & Bible Studies</a></h4>
-                        <p class="nameOfBook">199 items</p>
+                        <h4 class="down"><a href="<?php echo $this->bookUrl($book);?>"><b><?php echo $this->escape($book['title']);?></b></a></h4>
+                        <p><span class="by">by</span> Stephen King</p>
+                        <p class="prise center-block"><?php echo $this->escape($book['price']). '.00';?><a href="#" class="shop"><span><span class="fa fa-plus"></span><span class="fa fa-shopping-basket"></span></span></a></p>
                     </div>
-                    <div class="booksFirst">
-                        <figure class="center-block">
-                            <a href="#"><img src="/front/img/books/bookLightOrange.png" class="img-responsivek"></a>
-                        </figure>                         
-                        <h4><a href="#">Biographies</a></h4>
-                        <p class="nameOfBook">1 921 items</p>
-                    </div>
-                    <div class="booksFirst">
-                        <figure class="center-block">
-                            <a href="#"><img src="/front/img/books/redBook.png" class="img-responsive"></a>
-                        </figure>                         
-                        <h4><a href="#">Business & Money></a></h4>
-                        <p class="nameOfBook">466 items</p>
-                    </div>
-                    <div class="booksFirst">
-                        <figure class="center-block">
-                            <a href="#"><img src="/front/img/books/bookYellow.png" class="img-responsive"></a>
-                        </figure>                         
-                        <a href="#"><h4>Business & Money</a></h4>
-                        <p class="nameOfBook">466 items</p>
-                    </div>
-                    <div class="booksFirst">
-                        <figure class="center-block">
-                            <a href="#"><img src="/front/img/books/bookLightOrange.png" class="img-responsive"></a>                     
-                        </figure>                  
-                        <h4><a href="#">Children's Books</a></h4>
-                        <p class="nameOfBook">410 items</p>
-                    </div>
-                    <div class="booksFirst">
-                        <figure class="center-block">
-                            <a href="#"><img src="/front/img/books/bookYellow.png" class="img-responsive"></a>
-                        </figure>
-                        <h4><a href="#">Commputing & Internet</a></h4>
-                        <p class="nameOfBook">774 items</p>
-                    </div>
-                    <div class="booksFirst">
-                        <figure class="center-block">
-                            <a href="#"><img src="/front/img/books/bookBlack.png" class="img-responsivek"></a>
-                        </figure>                         
-                        <h4><a href="#">Cookbooks, Food & Wine</a></h4>
-                        <p class="nameOfBook">51 items</p>
-                    </div>
-                    <div class="booksFirst">
-                        <figure class="center-block">
-                            <a href="#"><img src="/front/img/books/bookGreen.png" class="img-responsive"></a>
-                        </figure>
-                        <h4><a href="#">Crafts & Hobbies</a></h4>                                         
-                        <p class="nameOfBook">Hezy Theme</p>
-                    </div>
-                    <div class="booksFirst">
-                        <figure class="center-block">
-                            <a href="#"><img src="/front/img/books/redBook.png" class="img-responsive"></a>
-                        </figure>                         
-                        <h4><a href="#">Crafts & Hobbies</a></h4>
-                        <p class="nameOfBook">Georgy Berns</p>
-                    </div>         
-                </div>            
+                    <?php }?>
+                </div>
             </div>
+                    
+                    
 
             <div class="container">
                 <div class="bestsellers clearfix text-center">
